# svgpdtools

./: .gitignore  README.md  setup.cfg
svgpdtools/: __init__.py  base.py  command.py  ellipticalarc.py  graphics.py  pathdata.py  point.py  terminal_command.py  transform.py  utils.py
svgpdtools/parser/: __init__.py
tests/: graphics.py  test_basic.py  test_parser.py  test_parser_transform.py  test_pd.py  test_pd_arc2curves.py  test_pd_transforms.py  test_terminal_command.TestCMDMain.test_view  test_terminal_command.py
