[metadata]
name = svgpdtools
varsion = attr: svgpdtools.__version__
author = Osamu Matsuda
author_email = osmatsuda@gmail.com
description = Manipulate path data of a path element of SVG.
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE.txt
url = https://osmatsuda.sakura.ne.jp/
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages_dir = svgpdtools
packages = svgpdtools
install_requires =
include_package_data = True
python_requires = >= 3.9

[options.entry_points]
console_scripts =
    svgpdnormalize = svgpdtools.command:normalize
