[metadata]
name = svgpdtools
version = attr: svgpdtools.__version__
author = Osamu Matsuda
author_email = osmatsuda@gmail.com
description = Manipulate pathdata of SVG path-elements.
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE.txt
url = https://osmatsuda.sakura.ne.jp/
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages_dir = svgpdtools
packages =
    svgpdtools
    svgpdtools.parser
install_requires =
    mako >= 1.2
include_package_data = True
python_requires = >= 3.9

[options.entry_points]
console_scripts =
    svgpdtools = svgpdtools.terminal_command:main
